--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 .box {
 	color: white;
-	font-size: 20px;
+	font-size: 80px;
 	text-align: center;
 	text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
@@ -26,11 +26,24 @@ html {
 
 .container {
 	display: flex;
-	/*justify-content: space-between;*/
-	justify-content: space-around;
-	/*justify-content: space-evenly;*/
-	/*justify-content: flex-start;*/
+	border: 10px solid mistyrose;
+	/*align-items: stretch;*/
+	align-items: flex-start;
+	/*align-items: center;*/
+	/*align-items: baseline;*/
 	flex-direction: column;
 	min-height: 100vh;
+}
+
+.box-1 {
+	font-size: 40px;
+}
+
+.box-2 {
+	font-size: 120px;
+}
+
+.box-6 {
+	font-size: 150px;
 }
 
