--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 .box {
 	color: white;
-	font-size: 80px;
+	font-size: 20px;
 	text-align: center;
 	text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
@@ -27,23 +27,17 @@ html {
 .container {
 	display: flex;
 	border: 10px solid mistyrose;
-	/*align-items: stretch;*/
-	align-items: flex-start;
-	/*align-items: center;*/
-	/*align-items: baseline;*/
-	flex-direction: column;
-	min-height: 100vh;
-}
+	height: 100vh;
+	/*align-content: stretch;*/
 
-.box-1 {
-	font-size: 40px;
-}
+	/*align-content: space-around;
+	align-items: center;  this two works the same*/
 
-.box-2 {
-	font-size: 120px;
-}
+	/*align-content: center;*/
+	align-items: center;
 
-.box-6 {
-	font-size: 150px;
+	flex-wrap: wrap;
 }
-
+.box {
+	width: calc(100% / 3);
+}
