--- a/style.css
+++ b/style.css
@@ -27,28 +27,20 @@ html {
 .container {
 	/*display: inline-flex;*/
 	display: flex;
-	border: 10px solid mistyrose;
-	height: 100vh;
-	align-items: start;
 }
 .box {
-	width: calc(100% / 9);
-	/*height: 40px;*/
+	flex: 1;
 }
 
-.box-6 {
-	padding-bottom: 150px;
+.box-3 {
+	flex: 3;
 }
 
-.box-4 {
-	padding-bottom: 200px;
+.box-5 {
+	flex: 5;
 }
 
-.box-9 {
-	padding-bottom: 200px;
-	align-self: stretch;
+.box-7 {
+	flex: 1.5;
 }
 
-.box-2 {
-	align-self: center;
-}
