--- a/navbar/style.css
+++ b/navbar/style.css
@@ -45,28 +45,32 @@ a:hover {
     border: #2A3786 solid thin;
 }
 
-/*.flex-nav__ul {*/
-/*    border: #2A3786 solid medium;*/
-/*    list-style: none;*/
-/*    padding: 0;*/
-/*    margin: 0;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    background-color: rgba(0, 0, 0, 0.2);*/
-/*    height: 40px;*/
-/*}*/
-
-.flex-nav__ul--li {
-    flex: 1;
-    padding: 0;
-    margin: 0;
+.flex-nav li {
+    flex: 3;
 }
 
-/*.flex-nav__ul--li:hover, .social:hover {*/
-/*    background-color: rgba(0, 0, 0, 0.3);*/
-/*}*/
 
-/*.social {*/
-/*    flex: 0.4;*/
-/*}*/
+.flex-nav .social {
+    flex: 1;
+}
 
+@media all and (max-width: 740px) {
+    .flex-nav ul {
+        /*flex-direction: column;*/
+        flex-wrap: wrap;
+    }
+
+    .flex-nav li {
+        flex: 1 1 50%;
+    }
+
+    .flex-nav .social {
+        flex: 1 1 25%;
+    }
+}
+
+@media all and (max-width: 500px) {
+    .flex-nav li {
+        flex: 1 1 100%;
+    }
+}
